# mastermind

./: CMakeLists.txt  library.h  main_.cpp
source/: library.h  mastermind.cpp  mastermind.h
tests/: tests.cpp
